# Parser-Verilog

./: CMakeLists.txt
example/: ot_parser.cpp  sample_parser.cpp
parser-verilog/: verilog_data.hpp  verilog_driver.hpp  verilog_lexer.l  verilog_parser.yy
unittest/: regression.cpp
